--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <div class="container">
         <div class="cloud">
-            <h2>Chúc cậu 20/10 vui vẻ,hạnh phúc, tiền nhiều như kẹo</h2>
+            <h2>Háp pi wo men day 20/10 </h2>
+            
+            <br>
+            <br>
+            <h3>Chắc có lẽ tớ là người chúc muộn nhất, nhưng không phải tớ quên đâu cố tình đó . Chúc cậu luôn vui vẻ, tình bền như keo, tiền nhiều như kẹo</h2>
         </div>
     </div>
 
