--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 
 <body>
     <div class="container">
+        <audio id="background-music" src="music.mp3" autoplay loop></audio>
+        <img src="463029466_1078682050280749_933652872342833585_n.jpg" alt="Cloud Image" class="cloud-image">
         <div class="cloud">
-            <h2>Háp pi wo men day 20/10 </h2>
-            
+            <h2>Háp pi wo men day 20/10</h2>
             <br>
             <br>
-            <h3>Chắc có lẽ tớ là người chúc muộn nhất, nhưng không phải tớ quên đâu cố tình đó . Chúc cậu luôn vui vẻ, tình bền như keo, tiền nhiều như kẹo</h2>
+            <h3>Chắc có lẽ tớ là người chúc muộn nhất, nhưng không phải tớ quên đâu cố tình đó. Chúc cậu luôn xinh đẹp, vui vẻ, tình bền như keo, tiền nhiều như kẹo</h3>
         </div>
     </div>
+    <div id="falling-elements"></div>
+
+    <!-- Thêm thẻ audio để phát nhạc -->
+   
 
     <script src="script.js"></script>
 </body>
